# fuzzy

./: .gitignore  README.md  install.sh
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  README.md  deeplab-demo.tf  deeplap.tf  deeplap.tf.backup  install_docker.sh  ipfs.tf  ipfs_01.tf  ipfs_02.tf  provider.tf  radio.tf  seaweedfs_01.tf  seaweedfs_02.tf  terraform.tfstate  terraform.tfstate.backup
infra/packer/ubuntu-server-focal-docker/: ubuntu-server-focal-docker.pkr.hcl
infra/packer/ubuntu-server-focal-docker/http/: user-data
infra/script/: gpu-hookscript.sh
traffic_congestion/: install.sh  pyproject.toml
traffic_congestion/asr/: pretrain.sh  run_wav2vec2_pretraining_no_trainer.py  silero_vad.ipynb  wav2vec2-base-vietnamese.ipynb  wav2vec2-large-vi-vlsp2020.ipynb  wave2vec.ipynb
traffic_congestion/data_collection/: .gitignore  .pre-commit-config.yaml  Dockerfile.radio  docker_radio_run.py  docker_radio_run.sh  docker_stop_all.sh  ffmpeg-release-amd64-static.tar.xz.dvc  install.sh  pyproject.toml  radio_channels.yaml
traffic_congestion/data_collection/.dvc/: config
traffic_congestion/data_collection/compaction/: main.py
traffic_congestion/data_collection/radio/: Dockerfile  README.md  compaction.py  data_retrieval.py  docker_run.sh  fetch_hls_stream.py  gcs_utils.py  grokking-ai.json.dvc  service-account.json.dvc
traffic_congestion/data_collection/radio/configs/: __init__.py  telebot.py
traffic_congestion/data_collection/radio/tests/: test_send_warning.py
traffic_congestion/data_collection/radio/utils/: aws.py  compaction.py  gcp.py  gcs.py  ipfs.py  notification.py
traffic_congestion/data_collection/seaweedfs/: README.md  s3.json.dvc  seaweedfs-compose.yml
traffic_congestion/data_collection/voh/: Pipfile  README.md  data_retrieval.py  fetch_hls_stream.py  gcs_utils.py  service-account.json
traffic_congestion/data_collection/voh/configs/: voh.py
traffic_congestion/data_collection/voh/tests/: test_send_warning.py
traffic_congestion/milkrun/: .pre-commit-config.yaml  Dockerfile  IPFS.md  config_ipfs.sh  configs.py  docker-compose.yml  pyproject.toml  r2_syncer.py
traffic_congestion/milkrun/ipfs/: IPFS.md  ipfs-compose.yml
