[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["tqtensor - <victortang212@gmail.com>"]
description = "Using AI to support the local community problem."
name = "data-collection"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.26.50"
click = "^8.1.3"
dotmap = "^1.3.30"
ffmpeg-python = "^0.2.0"
# fs-googledrivefs = "^2.3.2"
m3u8 = "^3.3.0"
py = "^1.11.0"
pydub = "^0.25.1"
pytest = "^7.2.0"
python = ">=3.8,<=3.11"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = {allow-prereleases = true, version = "^23.1a1"}
dvc = {extras = ["gs"], version = "^2.41.1"}
isort = "^5.10.1"
pre-commit = "^2.20.0"
toml-sort = "^0.22.1"
yapf = "^0.32.0"
